RESOLVED FIXED106814
Positioned children of an overflow:visible container should ignore scroll offset when updating layer position
https://bugs.webkit.org/show_bug.cgi?id=106814
Summary Positioned children of an overflow:visible container should ignore scroll off...
Tien-Ren Chen
Reported 2013-01-14 12:06:38 PST
Positioned childs of an overflow:visible container should ignore scroll offset when updating layer position
Attachments
Patch (5.36 KB, patch)
2013-01-14 12:16 PST, Tien-Ren Chen
no flags
Patch (5.36 KB, patch)
2013-01-14 14:21 PST, Tien-Ren Chen
no flags
Tien-Ren Chen
Comment 1 2013-01-14 12:16:36 PST
Simon Fraser (smfr)
Comment 2 2013-01-14 12:49:47 PST
Comment on attachment 182609 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=182609&action=review > Source/WebCore/ChangeLog:3 > + Positioned childs of an overflow:visible container should ignore scroll offset when updating layer position childs -> children > Source/WebCore/ChangeLog:11 > + and triggers a RenderGeometryMap assertion falure. Was that seen on any real sites? > LayoutTests/ChangeLog:3 > + Positioned childs of an overflow:visible container should ignore scroll offset when updating layer position children
Tien-Ren Chen
Comment 3 2013-01-14 14:21:16 PST
Simon Fraser (smfr)
Comment 4 2013-01-14 14:23:36 PST
From the cr bug, this fixes assertions when loading http://flightaware.com/live/flight/DLH454/history/20121222/0915Z/EDDF/KSFO
Tien-Ren Chen
Comment 5 2013-01-14 14:38:46 PST
(In reply to comment #4) > From the cr bug, this fixes assertions when loading > http://flightaware.com/live/flight/DLH454/history/20121222/0915Z/EDDF/KSFO It is probably dependent on viewport size and how do we handle Element::focus(). Somehow Element::focus() calls into RenderLayer::scrollRectToVisible, and it tries to scroll whatever blocks in the container chain. My opinion is that it would be nice if we also change RenderLayer::clampScrollOffset so it would always return (0, 0) when there is no overflow clip. Does that sounds reasonable to you?
WebKit Review Bot
Comment 6 2013-01-14 14:45:28 PST
Comment on attachment 182628 [details] Patch Clearing flags on attachment: 182628 Committed r139669: <http://trac.webkit.org/changeset/139669>
WebKit Review Bot
Comment 7 2013-01-14 14:45:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.