Positioned children of an overflow:visible container should ignore scroll offset when updating layer position https://bugs.webkit.org/show_bug.cgi?id=106814

Source/WebCore:

Patch by Tien-Ren Chen <trchen@chromium.org> on 2013-01-14
Reviewed by Simon Fraser.

This patch fixes a bug in RenderLayer::updateLayerPosition that
scrollLeft / scrollTop of a block should only be effective when the
block has overflow clipping. The bug results in rendering artifacts
and triggers a RenderGeometryMap assertion falure.

Fixes http://crbug.com/167985

Test: fast/overflow/overflow-visible-should-ignore-scroll.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateLayerPosition):

LayoutTests:

This patch fixes a bug in RenderLayer::updateLayerPosition that
scrollLeft / scrollTop of a block should only be effective when the
block has overflow clipping. The bug results in rendering artifacts
and triggers a RenderGeometryMap assertion falure.

Fixes http://crbug.com/167985

Patch by Tien-Ren Chen <trchen@chromium.org> on 2013-01-14
Reviewed by Simon Fraser.

* fast/overflow/overflow-visible-should-ignore-scroll-expected.html: Added.
* fast/overflow/overflow-visible-should-ignore-scroll.html: Added.

Canonical link: https://commits.webkit.org/125059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139669 268f45cc-cd09-0410-ab3c-d52691b4dbfc